syn-state-machine/src/snapshots/syn_state_machine__common_tokens__implementatins__tests__it_matches_simple_trait.snap
---
source: syn-state-machine/src/common_tokens.rs
expression: "crate::parse::<Implementation>(::quote::quote! {\n            unsafe impl < T : Copy > Copy for Option < T > {}\n        })"
---
Ok(
    (
        Trait(
            TraitImpl {
                r#unsafe: true,
                genetic_params: Some(
                    GenericParams(
                        [
                            TypeParam(
                                [],
                                TypeParam {
                                    id: Ident(
                                        T,
                                    ),
                                    bounds: Some(
                                        TypeParamBounds(
                                            [
                                                TraitBound(
                                                    TraitBound {
                                                        q: false,
                                                        for: None,
                                                        ty: TypePath {
                                                            leading: false,
                                                            segments: [
                                                                Simple {
                                                                    id: Id(
                                                                        Ident(
                                                                            Copy,
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    },
                                                ),
                                            ],
                                        ),
                                    ),
                                    ty: None,
                                },
                            ),
                        ],
                    ),
                ),
                neg: false,
                r#trait: TypePath {
                    leading: false,
                    segments: [
                        Simple {
                            id: Id(
                                Ident(
                                    Copy,
                                ),
                            ),
                        },
                    ],
                },
                ty: NoBounds(
                    TypePath(
                        TypePath {
                            leading: false,
                            segments: [
                                Generic {
                                    id: Id(
                                        Ident(
                                            Option,
                                        ),
                                    ),
                                    generic_args: GenericArgs(
                                        [
                                            Type(
                                                NoBounds(
                                                    TypePath(
                                                        TypePath {
                                                            leading: false,
                                                            segments: [
                                                                Simple {
                                                                    id: Id(
                                                                        Ident(
                                                                            T,
                                                                        ),
                                                                    ),
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                    ),
                                },
                            ],
                        },
                    ),
                ),
                attrs: [],
                items: [],
            },
        ),
        0,
    ),
)
